# LTX-2

./: README.md  pyproject.toml
notes/ltx-audio-trainer/: 01-训练主线文字图.md
packages_audio/ltx-audio-core/: README.md  pyproject.toml
packages_audio/ltx-audio-core/src/ltx_audio_core/: __init__.py  tools.py
packages_audio/ltx-audio-core/src/ltx_audio_core/block_streaming/: __init__.py  builder.py  disk.py  pool.py  provider.py  source.py  utils.py  wrapper.py
packages_audio/ltx-audio-core/src/ltx_audio_core/components/: diffusion_steps.py  guiders.py  noisers.py  patchifiers.py  protocols.py  schedulers.py
packages_audio/ltx-audio-core/tests/: test_infra_surface.py  test_text_encoders_surface.py
packages_audio/ltx-audio-pipeline/: README.md  pyproject.toml
packages_audio/ltx-audio-pipeline/src/ltx_audio_pipeline/: __init__.py  audio_one_stage.py
packages_audio/ltx-audio-pipeline/tests/: test_args_surface.py  test_audio_one_stage_entrypoint.py  test_audio_one_stage_surface.py  test_blocks_surface.py  test_constants_surface.py  test_denoisers_surface.py  test_exports_surface.py  test_helpers_surface.py  test_package_surface.py  test_packaging_surface.py  test_quantization_factory_surface.py  test_samplers_surface.py  test_types_surface.py
packages_audio/ltx-audio-trainer/: README.md  pyproject.toml
packages_audio/ltx-audio-trainer/scripts/: inference.py  process_audio.py  process_audio_dataset.py  process_captions.py  train.py
packages_audio/ltx-audio-trainer/src/ltx_audio_trainer/: __init__.py  config.py  config_display.py  datasets.py  gemma_8bit.py  gpu_utils.py  hf_hub_utils.py  model_loader.py  quantization.py  trainer.py  validation_sampler.py
packages_audio/ltx-audio-trainer/templates/: model_card.md
packages_audio/ltx-audio-trainer/tests/: test_config_surface.py  test_datasets_runtime.py  test_display_and_hub_surface.py  test_inference_runtime.py  test_inference_surface.py  test_model_loader_runtime.py  test_model_loader_surface.py  test_process_audio_dataset_runtime.py  test_process_audio_dataset_surface.py  test_process_helpers_runtime.py  test_process_helpers_surface.py  test_trainer_runtime.py  test_trainer_surface.py  test_validation_sampler_runtime.py  test_validation_sampler_surface.py
(+78 files in other folders)
