[project]
name = "ltx-audio-pipeline"
version = "0.1.0"
description = "Audio-only pipeline implementation for LTX-2"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ltx-audio-core",
    "tqdm",
]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
